--- a/src/styles/DataGridDropdown.module.scss
+++ b/src/styles/DataGridDropdown.module.scss
@@ -94,7 +94,7 @@
   }
 
   .dropdown {
-    border: 1px solid red;
+    // border: 1px solid red;
     margin: 0;
     padding: 0;
     width: 150px;
