--- a/src/styles/DataGridDropdown.module.scss
+++ b/src/styles/DataGridDropdown.module.scss
@@ -12,13 +12,17 @@
     height: 30px;
 }
 
+.tr:hover {
+    background: #f7aaaa;
+}
+
 .th,
 .td {
     box-shadow: inset 0 0 0 1px lightgray;
     padding: 0.25rem;
     white-space: nowrap;
     overflow: hidden;
-    // box-sizing: content-box;
+    text-overflow: ellipsis;
 }
 
 .th {
@@ -28,11 +32,9 @@
     text-align: center;
     height: 30px;
     cursor: pointer;
-    white-space: nowrap;
     overflow: hidden;
     color: black;
     background: white;
-    // box-sizing: content-box;
 }
 
 .td {
