--- a/src/pages/DataGridDropdown.module.scss
+++ b/src/pages/DataGridDropdown.module.scss
@@ -1,11 +1,12 @@
 .divTable {
-    border: 1px solid lightgray;
     width: fit-content;
-    width: var(--ddwidth);
+    width: 100%;
+    overflow: hidden;
 }
 
 .tr {
     display: flex;
+    width: 100%;
 }
 
 .tr {
@@ -19,12 +20,12 @@
 
 .th,
 .td {
-    box-shadow: inset 0 0 0 1px lightgray;
     padding: 0.25rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: left;
+    font-size: 14px;
 }
 
 .th {
@@ -66,20 +67,7 @@
     }
 }
 
-.rz-dropdown {
-    position: absolute;
-    border-radius: 4px;
-    box-shadow: var(--rz-dropdown-panel-shadow);
-    position: relative;
-    cursor: pointer;
-    font-size: 14px;
-    margin: 10px;
-    padding: var(--tablepadding);
-    color: #c9c3c3;
-    transform: var(--transition);
-    width: var(--ddwidth);
-    border: 1px solid red;
-}
+
 
 .material-symbol-outlined {
     cursor: pointer;
@@ -87,10 +75,12 @@
 
 .dropdown {
     margin: 0;
-    padding: 0;
-    width: var(--ddwidth);
+    padding: 40px;
+    width: calc(var(--ddwidth));
     border: 1px solid blue;
     padding: var(--tablepadding);
+    height: 500px;
+    overflow: hidden;
 }
 
 .rz-placeholder {
