--- a/src/styles/yardiInterface.module.scss
+++ b/src/styles/yardiInterface.module.scss
@@ -20,7 +20,7 @@
 .th,
 .td {
     // box-shadow: inset 0 0 0 1px lightgray;
-    padding: 0.25rem;
+    padding: 0.01rem;
     white-space: nowrap;
     overflow: hidden;
     margin-top: "10px";
@@ -128,4 +128,11 @@
         width: 100%;
         cursor: row-resize;
     }
+}
+.black {
+    color: black;
+}
+
+.white {
+    color:white;
 }
