--- a/src/pages/DataGridDropdown.module.scss
+++ b/src/pages/DataGridDropdown.module.scss
@@ -73,8 +73,8 @@
 
 .dropdown {
     margin: 0;
-    width: 175px;
-    border: 1px solid blue;
+    // width: 175px;
+    // border: 1px solid blue;
     padding: var(--tablepadding);
     overflow: hidden;
     cursor: pointer;
