--- a/src/pages/DataGridDropdown.module.scss
+++ b/src/pages/DataGridDropdown.module.scss
@@ -2,6 +2,7 @@
     width: fit-content;
     width: 100%;
     overflow: hidden;
+    background-color: #2e2e2e;
 }
 
 .tr {
@@ -73,8 +74,6 @@
 
 .dropdown {
     margin: 0;
-    // width: 175px;
-    // border: 1px solid blue;
     padding: var(--tablepadding);
     overflow: hidden;
     cursor: pointer;
@@ -89,4 +88,10 @@
     margin-top: 15px;
     width: 100%;
     display: flex;
+}
+
+.table-container {
+    background-color: #504c4c;
+    // border: 2px solid yellow;
+    padding: 20px;
 }
