--- a/src/pages/DataGridDropdown.module.scss
+++ b/src/pages/DataGridDropdown.module.scss
@@ -3,6 +3,19 @@
     width: 100%;
     overflow: hidden;
     background-color: #2e2e2e;
+    border: 1px solid white;
+    padding: 10px;
+    z-index: 9;
+}
+
+.ddTable {
+    width: fit-content;
+    width: 100%;
+    overflow: hidden;
+    background-color: #2e2e2e;
+    border: 1px solid white;
+    padding: 10px;
+    z-index: 9;
 }
 
 .tr {
