--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,8 +97,8 @@
 }
 
 * {
-  box-sizing: border-box;
-  color: white;
+  /* box-sizing: border-box; */
+  /* color: white; */
   margin: 0;
   padding: 0;
   border-width: 0;
