--- a/src/pages/GridDropdown.module.scss
+++ b/src/pages/GridDropdown.module.scss
@@ -122,6 +122,7 @@
     margin: 0;
     z-index: 0;
 }
+
 .dd-container {
     background-color: #504c4c;
     padding: 10px;
@@ -142,10 +143,10 @@
     display: block;
     transform: translateY(25%);
     margin: 0px;
-  }
+}
 
 
-  .active {
+.active {
     background-color: #f03a3a;
     transition-duration: 0.2s;
     align-items: center;
@@ -161,11 +162,11 @@
     display: block;
     transform: translateY(25%);
     margin: 0px;
-  }
+}
 
 
 
-  .rowdivider {
+.rowdivider {
     position: absolute;
     cursor: row-resize;
     user-select: none;
@@ -195,3 +196,14 @@
 .whitespace-nowrap {
     white-space: nowrap;
 }
+
+.rz-textbox.findcomponent {
+
+    color: white;
+    background-color: inherit;
+    font-size: 16px;
+    border-bottom: 1px solid #2f333d;
+    border-top: 1px solid #2f333d;
+    width: 100%;
+    cursor: pointer;
+  }
