--- a/src/pages/GridDropdown.module.scss
+++ b/src/pages/GridDropdown.module.scss
@@ -32,7 +32,7 @@
 
 .th,
 .td {
-    padding: 0.25rem;
+    padding-top: 0.25rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
