--- a/src/pages/GridDropdown.module.scss
+++ b/src/pages/GridDropdown.module.scss
@@ -117,6 +117,12 @@
     display: flex;
 }
 
+.dropdown-content-hidden {
+    margin-top: 15px;
+    width: 100%;
+    margin-bottom: 15px;
+    visibility: hidden;
+}
 .table-container {
     padding: 0;
     margin: 0;
