--- a/src/pages/GridDropdown.module.scss
+++ b/src/pages/GridDropdown.module.scss
@@ -10,7 +10,7 @@
 
 .ddTable {
     width: fit-content;
-    width: 100%;
+    width: auto;
     overflow: hidden;
     margin: 0;
     padding: 0;
@@ -28,29 +28,22 @@
 
 .th,
 .td {
-    padding-top: 0.25rem;
     overflow: hidden;
-    text-overflow: ellipsis;
     text-align: left;
     font-size: 14px;
-    padding: 0;
     margin: 0;
+    padding: 0.25rem;
 }
 
-.th,
-.gridtd {
-    padding: 0.25rem;
+.th {
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
     text-align: left;
     font-size: 14px;
-    padding: 0;
     margin: 0;
 }
 
 .th {
-    padding: 2px 4px;
     position: relative;
     font-weight: bold;
     text-align: left;
@@ -65,12 +58,28 @@
     background: #f7aaaa;
     display: flex;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
 }
 
 .td {
     height: 30px;
-    border-right:rgb(70, 70, 73) 1px solid;
+    display: flex;
+    // justify-content: center;
+    align-items: center;
+    text-align: left;
 }
+
+.td:hover {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
+
 
 .coldivider {
     position: absolute;
@@ -105,7 +114,7 @@
     padding: 0;
     overflow: hidden;
     cursor: pointer;
-    z-index: 10;
+    z-index: 0;
 }
 
 .rz-placeholder {
@@ -125,6 +134,7 @@
     margin-bottom: 15px;
     visibility: hidden;
 }
+
 .table-container {
     padding: 0;
     margin: 0;
@@ -154,7 +164,7 @@
 }
 
 
-.active {
+.active:not(.dropdown) {
     background-color: #f03a3a;
     transition-duration: 0.2s;
     align-items: center;
@@ -214,4 +224,20 @@
     border-top: 1px solid #2f333d;
     width: 100%;
     cursor: pointer;
-  }
+}
+
+.ddTable {
+    border-collapse: collapse;
+}
+
+.ddTable .td {
+    border: 1px solid red;
+}
+
+.ddTable>.td:not(:last-child) {
+    border-right: none;
+}
+
+.ddTable .tr:not(:last-child) .td {
+    border-bottom: none;
+}
