--- a/src/pages/GridDropdown.module.scss
+++ b/src/pages/GridDropdown.module.scss
@@ -14,6 +14,10 @@
     width: fit-content;
 }
 
+.trhover {
+    background: #f7aaaa;
+}
+
 .tr {
     display: flex;
     width: 100%;
@@ -30,10 +34,11 @@
 .td {
     overflow: hidden;
     text-align: left;
-    font-size: 14px;
     padding: 0;
     margin: 0;
     user-select: none;
+    box-sizing: content-box;
+    vertical-align: middle;
 }
 
 .th,
@@ -42,8 +47,6 @@
     overflow: hidden;
     text-align: left;
     font-size: 14px;
-    padding: 0;
-    margin: 0;
 }
 
 .th {
@@ -65,6 +68,9 @@
     color: white;
 }
 
+.td:hover {
+    border: 1px solid blue;
+}
 .tr-hoverable:hover {
     background: #f7aaaa;
     display: flex;
@@ -104,7 +110,7 @@
     padding: 0;
     overflow: hidden;
     cursor: pointer;
-    height: 30px;
+    height: 100%;
     z-index: 0;
     background-color: black;
 }
