--- a/src/pages/GenericDropdown.module.scss
+++ b/src/pages/GenericDropdown.module.scss
@@ -65,6 +65,7 @@
     color: white;
     padding: 2px;
     user-select: text;
+    z-index: 1001;
 }
 
 .tr-hoverable:hover {
@@ -110,25 +111,26 @@
     align-items: center;
     display: flex;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 0;
     overflow: visible;
 }
 
 .rz-placeholder {
     border: 1px solid rgb(70, 70, 73);
-    z-index: 1000;
+    z-index: 0;
     background-color: black;
     box-sizing: content-box;
     vertical-align: middle;
     align-items: center;
     display: flex;
-
 }
 
 .dropdown-content {
-    width: 100%;
     z-index: 1000;
     position: absolute;
+    box-sizing: content-box;
+    align-items: center;
+    // display: flex;
 }
 
 .dropdown-content-hidden {
@@ -142,7 +144,6 @@
 }
 
 .dd-container {
-    background-color: #1d1d1d;
     padding: 10px;
     position: absolute;
     z-index: 1000;
