--- a/src/pages/GenericDropdown.module.scss
+++ b/src/pages/GenericDropdown.module.scss
@@ -7,7 +7,7 @@
 
 .ddTable {
     // border: 1px solid blue;
-    background-color: black;
+    background-color: rgb(94, 94, 96);
     width: 100%;
 }
 
@@ -152,6 +152,7 @@
 .table-container {
     padding: 0;
     margin: 0;
+    border: 1px solid red;
 }
 
 .dd-container {
@@ -253,3 +254,4 @@
 .sdd {
     z-index: 1000;
 }
+
