--- a/src/pages/GridDropdown.module.scss
+++ b/src/pages/GridDropdown.module.scss
@@ -98,9 +98,9 @@
 }
 
 .rz-placeholder {
-    border: 1px solid rgb(70, 70, 73);
+    border: 1px solid black;
     z-index: 1000;
-    background-color: black;
+    background-color: rgb(70, 70, 73);
 }
 
 .dropdown-content {
